--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "globals": "^15.14.0",
     "lucide-react": "^0.475.0",
     "postcss": "^8.5.2",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.29.0",
     "react-toastify": "^11.0.3",
     "socket.io-client": "^4.8.1",
