--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "daisyui": "^4.12.23",
+    "dotenv": "^16.4.7",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
